# mon-x

./: .gitignore  Makefile  README.md  docker-compose.yml
agent/: Cargo.toml  Dockerfile  config.yaml
agent/src/: collector.rs  config.rs  main.rs  reporter.rs
agents/: deploy.sh
agents/java/: Dockerfile  MonXAgent.java  application.yml  pom.xml
backend/: Cargo.toml  ml_config.yaml
backend/src/: api.rs  gemma_ai.rs  kafka.rs  log_humanizer.rs  main.rs  ml.rs  opensearch.rs  websocket.rs
backend/src/model/: .localinference
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AIInsightsPanel.js  AnomaliesPanel.js  AppDetailPage.js  AppDiscoveryWidget.js  Dashboard.js  LogsTable.js  MetricsChart.js
scripts/: agent_producer.py  demo.sh  log_generator.py  setup_ai.sh  test_ai_insights.py  test_gguf_ai.py  test_gguf_complete.py  test_humanizer.py
